--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,3 +28,7 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+      -
+        name: Deploy
+        run: |
+          curl -X POST ${{ secrets.PLAY_WITH_DOCKER_WH }}
